Add installation notes for Mac M2.