@@ -76,6 +76,27 @@ To install the prototype implementation, simply run
 python setup.py install
 ```
 
+### Mac M2
+
+```shell
+$ brew install openjdk
+
+# Update PATH accordingly
+
+$ java --version
+openjdk 20.0.1 2023-04-18
+OpenJDK Runtime Environment Homebrew (build 20.0.1)
+OpenJDK 64-Bit Server VM Homebrew (build 20.0.1, mixed mode, sharing)
+```
+
+To generate `swagger_client`, make sure to run Java with `--add-opens` option.
+
+```shell
+java \
+    --add-opens java.base/java.util=ALL-UNNAMED \
+    -jar swagger-codegen-cli.jar generate -i openapis/swagger.yaml -l python -o swagger_client
+```
+
 ## Installation with Docker
 
 ```bash
